--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,6 @@ spring.datasource.url=jdbc:postgresql://localhost/library
 spring.datasource.username=postgres
 #untuk password database
 spring.datasource.password=admin
-#spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jooq.sql-dialect=org.hibernate.dialect.PostgreSQL10Dialect
