--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-#server.port=9999
+server.port=9999
 
 # untuk mendefine driver database, dengan cara
 spring.datasource.driver-class-name=org.postgresql.Driver
 # untuk mengarahkan url ke database yang akan digunakan
-spring.datasource.url=jdbc:postgresql://localhost/library_testing
+spring.datasource.url=jdbc:postgresql://localhost/ddl_mandiri
 #untuk username database
 spring.datasource.username=postgres
 #untuk password database
